--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "iq-test",
   "version": "0.1.0",
   "homepage" : "https://alinakulakovska.github.io/QuizAppReact",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
