--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iq-test",
   "version": "0.1.0",
-  "homepage" : "https://alinakulakovska.github.io/QuizAppReact",
+  "homepage": "https://alinakulakovska.github.io/QuizAppReact",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -10,7 +10,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.10.0",
-    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -41,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "react-router-dom": "^6.23.1"
   }
 }
